# algolib

./: .gitignore  AVL.cpp  CMakeLists.txt  LIS.cpp  README.md  a.out  algo  algo.cpp  avl  bfs  bfs.cpp  bi_tree.cpp  bit  bit_man.cpp  bs  bt.cpp  closest_point.cpp  dfs.cpp  dijsktra.cpp  dinics.cpp  ft  graph_in.txt  io.cpp  kmp  kmp.cpp  lcp  line.cpp  line.h  lis  lowest_common_ancestor.cpp  main  main.cpp  permutation.cpp  prime  prime.cpp  reversebits.cpp  rmq.cpp  run_cpp.sh  segment_tree.cpp  segment_tree_mss.cpp  (+4 more)
CPP_example_code/: iomanip.cpp  prime_gap.cpp
UVa/: uva_00242.cpp  uva_00259.cpp  uva_00261_ac.cpp  uva_00469.cpp  uva_00787.cpp  uva_01013.cpp  uva_01103.cpp  uva_01105.cpp  uva_01105_ac.cpp  uva_01196.cpp  uva_01213.cpp  uva_01265.cpp  uva_10003.cpp  uva_10448.cpp  uva_10600.cpp  uva_10755.cpp  uva_10827.cpp  uva_10909.cpp  uva_10943.cpp  uva_11080.cpp  uva_11151.cpp  uva_11195.cpp  uva_11228.cpp  uva_11380.cpp  uva_11456.cpp  uva_11504.cpp  uva_11536.cpp  uva_11566.cpp  uva_11790.cpp  uva_11832.cpp  uva_11951.cpp  uva_12640.cpp  uva_261.cpp  uva_750.cpp
benchmarks/: arraycache.cpp  runbench.sh
contest/: p1.cpp  p7.cpp
contest15JK/: p12.cpp  p4.cpp  p7.cpp  p7_d.cpp  p9.cpp
contest15SG/: p3.cpp  p4.cpp  p7.cpp  p9.cpp
contest17Latin/: 00.cpp  p3.cpp  p9.cpp  p90.cpp
contest17Tsu/: p1.cpp  p1a.cpp  p9.cpp
effective/: type_deduction.cc
lt/: 1044_longest_dup_substr.cpp  106_bst_build_from_order.cpp  1143_longest_subsequence.cpp  115_distinct_subseq.cpp  118_pascal_triange.cpp  120_triangle.cpp  124_bst_max_path_sum.cpp  126_word_ladder_ii.cpp  127_word_ladder.cpp  128_longest_conseq_seq.cpp  131_palindrome_partition.cpp  133_clone_graph.cpp  13_roman_to_int.cpp  140_word_break.cpp  142_linked_list_cycle.cpp  146_lru_cache.cpp  1473_paint_house.cpp  14_lcp.cpp  15_3_sum.cpp  174_dungeon_game.cpp  198_house_robber.cpp  199_bst_sideview.cpp  218_skyline.cpp  21_merge_sorted_list.cpp  221_max_square.cpp  2223_sum_prefixlen.cpp  225_queue_stack.cpp  233_count_one.cpp  (+88 more)
(+44 files in other folders)
