cmake_minimum_required(VERSION 3.8)
project(algolib)

set(CMAKE_CXX_STANDARD 11)

add_executable(algolib main.cpp ufds.cpp bt.cpp prime.cpp AVL.cpp algo.cpp bit_man.cpp suffix_array_lcp.cpp kmp.cpp LIS.cpp bi_tree.cpp dfs.cpp bfs.cpp rmq.cpp segment_tree.cpp lowest_common_ancestor.cpp UVa/uva_750.cpp UVa/uva_11195.cpp UVa/uva_261.cpp UVa/uva_00261_ac.cpp UVa/uva_11536.cpp UVa/uva_10909.cpp UVa/uva_11151.cpp)