cmake_minimum_required(VERSION 3.8)
project(algolib)

set(CMAKE_CXX_STANDARD 11)

add_executable(algolib main.cpp ufds.cpp bt.cpp prime.cpp AVL.cpp algo.cpp bit_man.cpp suffix_array_lcp.cpp kmp.cpp LIS.cpp bi_tree.cpp dfs.cpp bfs.cpp rmq.cpp segment_tree.cpp lowest_common_ancestor.cpp UVa/uva_750.cpp UVa/uva_11195.cpp UVa/uva_261.cpp UVa/uva_00261_ac.cpp UVa/uva_11536.cpp UVa/uva_10909.cpp UVa/uva_11151.cpp UVa/uva_00469.cpp UVa/uva_01103.cpp UVa/uva_11080.cpp UVa/uva_11504.cpp UVa/uva_10600.cpp UVa/uva_11228.cpp UVa/uva_01013.cpp UVa/uva_01265.cpp UVa/uva_10943.cpp UVa/uva_10003.cpp UVa/uva_00259.cpp dinics.cpp UVa/uva_11380.cpp UVa/uva_00787.cpp UVa/uva_10755.cpp UVa/uva_12640.cpp UVa/uva_01105.cpp UVa/uva_01105_ac.cpp UVa/uva_10827.cpp UVa/uva_11951.cpp UVa/uva_01196.cpp UVa/uva_11456.cpp UVa/uva_11790.cpp contest/p1.cpp contest/p3.cpp contest/p9.cpp contest/p4.cpp contest/p7.cpp)